Operaciones con Cojuntos

--- a/python_102_1.ipynb
+++ b/python_102_1.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Método pop(): Nos devuelve un elemento aleatorio y lo elimina. Si el conjunto está vacio lanza error."
+    "__Método pop():__ Nos devuelve un elemento aleatorio y lo elimina. Si el conjunto está vacio lanza error."
    ]
   },
   {
