--- a/python_102_function.ipynb
+++ b/python_102_function.ipynb
@@ -42,15 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1577791020.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif text == user_option[0] :\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Con mi computadora puedo programar usando Python\n"
      ]
     }
    ],
@@ -59,17 +58,25 @@
     "    user_option = ['computadora', 'celular', 'cable']\n",
     "    if text not in user_option :\n",
     "        message = \"Artículo no encontrado\"\n",
-    "        elif text == user_option[0] :\n",
-    "            message = \"Con mi computadora puedo programar usando Python\"\n",
-    "        elif text == user_option[1]:\n",
-    "            message = \"En mi celular puedo aprender usando la app de Platzi\"\n",
+    "    elif text is user_option[0]:\n",
+    "        message = \"Con mi computadora puedo programar usando Python\"\n",
+    "    elif text == user_option[1]:\n",
+    "        message = \"En mi celular puedo aprender usando la app de Platzi\"\n",
     "    else:\n",
-    "            message = \"¡Hay un cable en mi bota!\"\n",
+    "        message = \"¡Hay un cable en mi bota!\"\n",
     "    return message\n",
     "\n",
     "text = 'computadora'\n",
     "response = message_creator(text)\n",
     "print(response)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Funciones anonimas: Lambdas"
    ]
   },
   {
