--- a/python_102_function.ipynb
+++ b/python_102_function.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,90 @@
    "source": [
     "# Funciones anonimas: Lambdas"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`def func(args):\n",
+    "    return ret_val`\n",
+    "\n",
+    "Su equivalente en función anónima es\n",
+    "\n",
+    "`func = lambda args: retval`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def increment(x):\n",
+    "    return x+10\n",
+    "\n",
+    "increment_v2 = lambda x: x+10"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Son formas equivalentes de plantear una función"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(increment(10))\n",
+    "print(increment_v2(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_name = lambda name, lastname: f'Nombre completo: {name.title()} {lastname.title()}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre completo: Daniel Tejada\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_name('daniel','tejada'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
