Parte final del curso
Signed-off-by: BioDani <dtejada@unal.edu.co>

--- a/python_102_filter.ipynb
+++ b/python_102_filter.ipynb
@@ -119,7 +119,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = {1,2}\n",
+    "b = {2,3}\n",
+    "print(a | b)"
+   ]
   }
  ],
  "metadata": {
